More overlapping fixes

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -389,7 +389,7 @@ padding: 1rem 1em ;
 }
 .social>li{
     display: block;
-
+    z-index: 5;
     margin: 0 2rem 0;
 }
 
